Changing the Colorspace settings of a Movieclip is not properly updating Camera Background Images #66872

Closed
opened 2019-07-13 17:48:16 +02:00 by Sebastian Koenig · 7 comments

System Information
Operating system: Linux-4.4.0-151-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-12 17:50, hash: e3c586e262
Worked: (optional)

Short description of error
Changing the colorspace of Camera Background Images (in this case Movieclip) is not properly updating the display in the 3d viewport.
For example I load a sequence of EXR images in the Clip Editor and set that clip as source for Camera Background images.
If I now change the color space in the colorspace dropdown menu in the Camera Background Images panel, the colors of the clip in the clip editor change accordingly, but the colors of the background images in the 3d viewport stay the same.

Exact steps for others to reproduce the error
Let's take this file as an example: colorspace_example.blend mango.exr

Inititally the color space of the clip is set to Linear.
Now change the colorspace to e.g. Linear Aces (not that this would make much sense in this case, but as a demo).
The colors of the clip change, the colors of the image in 3d viewport do not.
However:
If you now press the button "Render Undistorted" in the camera background images panel, the colors in 3d view update.
If you disable the button again, the colors go back to the look they had before. I assume the 2 versions are cached somehow.
The thing is, if you now change the colorspace to Raw for instance, pressing "Render Undistorted" does not update the display of colors anymore.
So there is no reliable way to adjust the colorspace of background images.

What I assume would happen is that as soon as I change the colorspace, the internal cache is deleted and the view updated.

**System Information** Operating system: Linux-4.4.0-151-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-12 17:50, hash: `e3c586e262` Worked: (optional) **Short description of error** Changing the colorspace of Camera Background Images (in this case Movieclip) is not properly updating the display in the 3d viewport. For example I load a sequence of EXR images in the Clip Editor and set that clip as source for Camera Background images. If I now change the color space in the colorspace dropdown menu in the Camera Background Images panel, the colors of the clip in the clip editor change accordingly, but the colors of the background images in the 3d viewport stay the same. **Exact steps for others to reproduce the error** Let's take this file as an example: [colorspace_example.blend](https://archive.blender.org/developer/F7605821/colorspace_example.blend) ![mango.exr](https://archive.blender.org/developer/F7605822/mango.exr) Inititally the color space of the clip is set to Linear. Now change the colorspace to e.g. Linear Aces (not that this would make much sense in this case, but as a demo). The colors of the clip change, the colors of the image in 3d viewport do not. However: If you now press the button "Render Undistorted" in the camera background images panel, the colors in 3d view update. If you disable the button again, the colors go back to the look they had before. I assume the 2 versions are cached somehow. The thing is, if you now change the colorspace to Raw for instance, pressing "Render Undistorted" does not update the display of colors anymore. So there is no reliable way to adjust the colorspace of background images. What I assume would happen is that as soon as I change the colorspace, the internal cache is deleted and the view updated.
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

#67736 was marked as duplicate of this issue

#67736 was marked as duplicate of this issue

Added subscribers: @Sergey, @ZedDB

Added subscribers: @Sergey, @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-07-18 14:07:44 +02:00

@Sergey I'm guessing this an update event is missing?

@Sergey I'm guessing this an update event is missing?

NOTE: The issue is not limited to the color management, and actual solution is to make movie clip cache shared across compositor, render engines, editors and so on (currently those are decoupled).

NOTE: The issue is not limited to the color management, and actual solution is to make movie clip cache shared across compositor, render engines, editors and so on (currently those are decoupled).

This issue was referenced by 2cce65de96

This issue was referenced by 2cce65de9695943c5189b74d1c3a480d2b72889f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66872
No description provided.