source/blender/makesrna/intern/rna_movieclip.c
@@ -51,12 +51,11 @@
 #  include "DNA_screen_types.h"
 #  include "DNA_space_types.h"
 
-static void rna_MovieClip_reload_update(Main *bmain, Scene *UNUSED(scene), PointerRNA *ptr)
+static void rna_MovieClip_reload_update(Main *UNUSED(bmain), Scene *UNUSED(scene), PointerRNA *ptr)
 {
   MovieClip *clip = (MovieClip *)ptr->id.data;
 
-  BKE_movieclip_reload(bmain, clip);
-  DEG_id_tag_update(&clip->id, 0);
+  DEG_id_tag_update(&clip->id, ID_RECALC_SOURCE);
 }
 
 static void rna_MovieClip_size_get(PointerRNA *ptr, int *values)
